<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/red"
    tools:context=".RegisterActivity">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardBackgroundColor="@color/white"
      android:layout_marginTop="20dp"
      app:cardCornerRadius="10dp"
      app:cardElevation="10dp"
      android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
      <ImageView
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:src="@drawable/logo"/>
      <TextView
          android:text="@string/app_welcome_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="25sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:gravity="center" />
      <TextView
          android:id="@+id/appSlogan"
          android:text="@string/app_welcome_user_type_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:gravity="center"
          android:layout_marginTop="5dp"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/donorBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/donorBtn"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:background="@drawable/buttons_background"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/receiverBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/receiverBtn"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:background="@drawable/buttons_background"/>
        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_registered_user"
            android:gravity="center"
            android:textColor="@color/black"
          android:layout_marginTop="10dp"
          android:textSize="20dp"
          android:textStyle="bold"
          android:fontFamily="sans-serif-condensed-medium"/>
      </LinearLayout>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  </ScrollView>